ErrorHandler y consulta de apis

--- a/Ticket.Api/appsettings.json
+++ b/Ticket.Api/appsettings.json
@@ -20,6 +20,11 @@
     ]
   },
 
+  "AppSettings": {
+    "PassengerUrlBase": "https://localhost:44387/api/",
+    "JourneyUrlBase": "https://localhost:44311/api/"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
